update: correct CcardUser and visible user in superadmin pannel

--- a/src/common/Ccard/Ccard.css
+++ b/src/common/Ccard/Ccard.css
@@ -24,8 +24,6 @@
 }
 .likeSection {
 
-    background-color: brown;
-
     display: flex;
     flex-direction: row;
     justify-content: center;
